[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=2]

[node name="Background" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="MaximizeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="MaximizeTimer" to="." method="_on_MaximizeTimer_timeout"]
